--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "an-array-of-english-words": "^1.3.1",
     "body-parser": "~1.18.2",
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "~1.4.3",
@@ -15,5 +16,8 @@
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
     "superagent": "^3.8.2"
+  },
+  "devDependencies": {
+    "google-charts": "^1.0.0"
   }
 }
