--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hjs": "~0.0.6",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5",
+    "string-similarity": "^1.2.0",
     "superagent": "^3.8.2"
   },
   "devDependencies": {
