--- a/package.json
+++ b/package.json
@@ -17,11 +17,19 @@
     "hjs": "~0.0.6",
     "mongoose": "^5.0.7",
     "morgan": "~1.9.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "serve-favicon": "~2.4.5",
     "string-similarity": "^1.2.0",
     "superagent": "^3.8.2"
   },
   "devDependencies": {
-    "google-charts": "^1.0.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "google-charts": "^1.0.0",
+    "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.9"
   }
 }
